--- a/views/vw-dbEditPassport.pug
+++ b/views/vw-dbEditPassport.pug
@@ -85,6 +85,7 @@ html
 						th(onclick="sortTable(20)") min_order
 						th(onclick="sortTable(21)") edlp
 						th(onclick="sortTable(22)" style="min-width:15rem") order_qty
+						th(onclick="sortTable(23)") RtlRvw
 
 
 
@@ -115,6 +116,7 @@ html
 								td= elmnt.min_order
 								td= elmnt.edlp
 								td= elmnt.order_qty
+								td= elmnt.rtlRvw
 
 
 		//- script(src='/javascripts/dbEditPassport.js')
