begin handling of auto-updating rainbowcat when retail review/imw files saved

--- a/views/vw-dbEditPassport.pug
+++ b/views/vw-dbEditPassport.pug
@@ -86,6 +86,7 @@ html
 						th(onclick="sortTable(21)") edlp
 						th(onclick="sortTable(22)" style="min-width:15rem") order_qty
 						th(onclick="sortTable(23)") RtlRvw
+						th(onclick="sortTable(24)") RtlImw
 
 
 
@@ -117,6 +118,7 @@ html
 								td= elmnt.edlp
 								td= elmnt.order_qty
 								td= elmnt.rtlRvw
+								td= elmnt.rtlImw
 
 
 		//- script(src='/javascripts/dbEditPassport.js')
