--- a/views/vw-dbEditPassport.pug
+++ b/views/vw-dbEditPassport.pug
@@ -87,6 +87,7 @@ html
 						th(onclick="sortTable(22)" style="min-width:15rem") order_qty
 						th(onclick="sortTable(23)") RtlRvw
 						th(onclick="sortTable(24)") RtlImw
+						th(onclick="sortTable(25)") tot updtd
 
 
 
@@ -119,6 +120,7 @@ html
 								td= elmnt.order_qty
 								td= elmnt.rtlRvw
 								td= elmnt.rtlImw
+								td= elmnt.tot_updtd
 
 
 		//- script(src='/javascripts/dbEditPassport.js')
