--- a/views/vw-dbEditPassport.pug
+++ b/views/vw-dbEditPassport.pug
@@ -90,8 +90,9 @@ html
 						th(onclick="sortTable(21)") edlp
 						th(onclick="sortTable(22)" style="min-width:15rem") order_qty
 						th(onclick="sortTable(23)") RtlRvw
-						th(onclick="sortTable(24)") RtlImw
-						th(onclick="sortTable(25)") tot updtd
+						th(onclick="sortTable(25)") wsImw
+						th(onclick="sortTable(26)") rtlImw
+						th(onclick="sortTable(27)") tot updtd (rtl)
 
 
 
@@ -123,8 +124,9 @@ html
 								td= elmnt.edlp
 								td= elmnt.order_qty
 								td= elmnt.rtlRvw
+								td= elmnt.wsImw
 								td= elmnt.rtlImw
-								td= elmnt.tot_updtd
+								td= elmnt.tot_updtd_rtl
 
 
 		//- script(src='/javascripts/dbEditPassport.js')
