--- a/views/vw-dbEditPassport.pug
+++ b/views/vw-dbEditPassport.pug
@@ -73,23 +73,24 @@ html
 						th(onclick="sortTable(4)") Issue_Date
 						th(onclick="sortTable(5)" style="display:none") Need New Catalog?
 						th(onclick="sortTable(6)" style="display:none") Updated w/ Latest?
-						th(onclick="sortTable(7)" style="min-width:15rem") ___Comments1___
-						th(onclick="sortTable(8)" style="min-width:15rem") ___Comments2___
-						th(onclick="sortTable(9)" style="min-width:15rem") ___Comments3___
-						th(onclick="sortTable(10)" style="min-width:15rem") Andrea_Comments
-						th(onclick="sortTable(11)" style="min-width:15rem") Nathan_Comments
-						th(onclick="sortTable(12)") Vendor Email (for auto-emails)
-						th(onclick="sortTable(13)") Wellness Margins
-						th(onclick="sortTable(14)") Ongoing Disco
-						th(onclick="sortTable(15)") EA-#n divide?
-						th(onclick="sortTable(16)") CS-#n divide?
-						th(onclick="sortTable(17)" style="min-width:15rem") special1
-						th(onclick="sortTable(18)" style="min-width:15rem") disco_appld_to
-						th(onclick="sortTable(19)" style="min-width:15rem") sales_method
-						th(onclick="sortTable(20)") min_order
-						th(onclick="sortTable(21)") edlp
-						th(onclick="sortTable(22)" style="min-width:15rem") order_qty
-						th(onclick="sortTable(23)") RtlRvw
+						th(onclick="sortTable(7)") last_rtl_updt
+						th(onclick="sortTable(8)" style="min-width:15rem") ___Comments1___
+						th(onclick="sortTable(9)" style="min-width:15rem") ___Comments2___
+						th(onclick="sortTable(10)" style="min-width:15rem") ___Comments3___
+						th(onclick="sortTable(11)" style="min-width:15rem") Andrea_Comments
+						th(onclick="sortTable(12)" style="min-width:15rem") Nathan_Comments
+						th(onclick="sortTable(13)") Vendor Email (for auto-emails)
+						th(onclick="sortTable(14)") Wellness Margins
+						th(onclick="sortTable(15)") Ongoing Disco
+						th(onclick="sortTable(16)") EA-#n divide?
+						th(onclick="sortTable(17)") CS-#n divide?
+						th(onclick="sortTable(18)" style="min-width:15rem") special1
+						th(onclick="sortTable(19)" style="min-width:15rem") disco_appld_to
+						th(onclick="sortTable(20)" style="min-width:15rem") sales_method
+						th(onclick="sortTable(21)") min_order
+						th(onclick="sortTable(22)") edlp
+						th(onclick="sortTable(23)" style="min-width:15rem") order_qty
+						th(onclick="sortTable(24)") RtlRvw
 						th(onclick="sortTable(25)") wsImw
 						th(onclick="sortTable(26)") rtlImw
 						th(onclick="sortTable(27)") tot updtd (rtl)
@@ -107,6 +108,7 @@ html
 								td= elmnt.IssDt
 								td(style="display:none")= elmnt.NdNw
 								td(style="display:none")= elmnt.Updtd
+								td= elmnt.last_rtl_updt
 								td= elmnt.Cmnts1
 								td= elmnt.Cmnts2
 								td= elmnt.Cmnts3
